--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+time = { version = "0.3.41", features = ["serde"] }
+tokio = "1.47.1"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
+dotenv = "0.15.0"
+uuid = { version = "1.18.0", features = ["v4", "serde"] }
 
