--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-time = { version = "0.3.41", features = ["serde"] }
+time = { version = "0.3.41", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
 tokio = "1.47.1"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
 dotenv = "0.15.0"
