--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
+log = "0.4"
+env_logger = "0.10"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 time = { version = "0.3.41", features = ["serde", "serde-human-readable", "formatting", "parsing"] }
